<resources>
    <string name="app_name">weverse-shop-clone</string>
    <string name="bottom_navigation_shop">Shop</string>
    <string name="bottom_navigation_cart">Cart</string>
    <string name="bottom_navigation_my">My</string>
    <string name="bottom_navigation_more">More</string>
    <string name="shop_goods_title">상품</string>
    <string name="shop_goods_tab_book">BOOK</string>
    <string name="shop_goods_tab_collab">COLLAB</string>
    <string name="shop_goods_tab_merch">MERCH</string>
    <string name="shop_goods_tab_album">ALBUM</string>
    <string name="shop_goods_tab_membership">MEMBERSHIP</string>
    <string name="shop_goods_tab_weverse">WEVERSE</string>
    <string name="shop_goods_tab_dvd">DVD</string>
    <string name="shop_goods_tab_pop_up">POP-UP</string>
    <string name="shop_goods_tab_live">LIVE</string>
    <string name="shop_goods_tab_bangbang">BANGBANG POP-UP</string>
    <string name="shop_goods_tab_art_toy">ART TOY</string>
    <string name="shop_goods_more_button">모든 상품 더보기</string>
    <string name="shop_recent_goods_title">최근 본 상품</string>
    <string name="shop_notice_title">공지사항</string>
    <string name="company_name">beNX</string>
    <string name="company_info">사업자 정보</string>
    <string name="company_info_desc">COMPANY : beNX CO., Ltd | CEO : 서우석\nCALL CENTER : 1544–0790 | FAX v: 02–2144–9399\nADDRESS : 서울특별시 강남구 테헤란로 108길 42\n개인정보관리책임자 : 배상훈(privacy@weverseshop.io)\n사업자등록번호 : 716–87–01158 사업자정보확인\n통신판매업 신고번호 : 제2018-서울강남-02688호\n호스팅 서비스 사업자 : Amazon Web Services, Inc.\n\nCopyright by beNX CO., LTD. or its affiliates (Big Hit\nSolutions Japan &amp; Big Hit AMERICA) All rights reserved.</string>
    <string name="company_privacy_policy">개인정보 처리방침 (Weverse Shop)</string>
    <string name="company_terms_of_use">이용약관</string>
    <string name="company_paid_service_terms">유료서비스 이용약관</string>
    <string name="goods_sole_sale">단독판매</string>
    <string name="goods_pre_order">예약판매</string>
    <string name="goods_sold_out">품절</string>
    <string name="goods_stop_selling">판매중지</string>
    <string name="goods_won">₩ %s</string>
    <string name="bottom_sheet_button">완료</string>
    <string name="bottom_sheet_title">아티스트 및 샵 선택</string>
    <string name="artist_shop_title">%s · %s</string>
    <string name="toast_click_banner">배너를 클릭했습니다.</string>
    <string name="toast_click_goods">상품을 클릭했습니다.</string>
    <string name="toast_click_goods_all">모든 상품 더보기를 클릭했습니다.</string>
    <string name="toast_click_notice">공지사항을 클릭했습니다.</string>
    <string name="toast_back_pressed">\'뒤로\' 버튼을 한 번 더 누르시면 앱이 종료됩니다.</string>
</resources>