<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/background_main"
                android:elevation="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_artist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:padding="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <TextView
                        android:id="@+id/text_artist_name"
                        style="@style/text_artist_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/layout_artist_shop"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_artist_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/background_shop_type"
                        app:layout_constraintBottom_toBottomOf="@id/text_artist_name"
                        app:layout_constraintLeft_toRightOf="@id/text_artist_name"
                        app:layout_constraintRight_toLeftOf="@id/view_drop_down"
                        app:layout_constraintTop_toTopOf="@id/text_artist_name"
                        >

                        <TextView
                            android:id="@+id/text_artist_shop"
                            style="@style/text_shop_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/view_drop_down"
                        android:layout_width="20dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/ic_drop_down"
                        app:layout_constraintBottom_toBottomOf="@id/text_artist_name"
                        app:layout_constraintDimensionRatio="1"
                        app:layout_constraintLeft_toRightOf="@id/layout_artist_shop"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/text_artist_name"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewpager_banner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_artist"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_goods"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/background_main"
                android:elevation="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_top"
                >

                <TextView
                    android:id="@+id/text_goods_title"
                    style="@style/text_shop_title"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:background="@color/background_main"
                    android:elevation="1dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/shop_goods_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/layout_tab_shop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/background_main"
                    android:elevation="1dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_goods_title"
                    app:tabIndicatorFullWidth="false"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="@color/tab_main"
                    >

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_book"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_collab"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_merch"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_album"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_membership"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_weverse"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_dvd"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_pop_up"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_live"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_bangbang"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_goods_tab_art_toy"
                        />

                </com.google.android.material.tabs.TabLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_goods"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_tab_shop"
                    />

                <Button
                    android:id="@+id/button_goods_more"
                    style="@style/button_shop_goods_more"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:stateListAnimator="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_goods"
                    app:layout_constraintWidth_percent="0.9"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>